--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "devDependencies": {
     "@parcel/transformer-elm": "^2.0.0-beta.2",
     "elm": "0.19.1-5",
+    "elm-format": "^0.8.5",
     "elm-hot": "^1.1.5",
+    "elm-test": "^0.19.1-revision11",
     "node-elm-compiler": "^5.0.5",
     "parcel-bundler": "^1.12.4"
   }
